@@ -100,6 +100,8 @@ CONF.MOD_GROUP_BY_BUFFERING_POLICY = {:buffering_class => :MergeSortBuffer}
 ##CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
 CONF.SORT_N_GROUP_BY = CONF.N_MOD_GROUP_BY
 
+##CONF.IOTA_SPLIT_NO = 4
+
 ##CONF.VF_ROOT = CONF.HOME+"/Repos"
   CONF["emperor2"].VF_ROOT = CONF.HOME+"/test/Repos"
   CONF["gentoo"].VF_ROOT = CONF.HOME+"/test/Repos"
