@@ -1,3 +1,9 @@
+Fri Dec 18 00:01:38 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
+
+	* input-iota.rb: [BUG#185], [REQ#184]対応
+	* njob.rb, port.rb: [REQ#183]対応
+	* file-place.rb: [BUG#185]対応
+
 Thu Dec 17 19:08:55 2009  Keiju Ishitsuka  <keiju@emperor2.pendome>
 
 	* fairy.rb: [REQ#137]対応. クライアントからabortできるようにした.
